lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__expr-16.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"math::Vec2 { x: 1, y: 2, }\", |p| p.expr())"
---
RECORD_EXPR: 0..26 
  PATH: 0..10 
    IDENT: 0..4 "math"
    COLON: 4..5 ":"
    COLON: 5..6 ":"
    IDENT: 6..10 "Vec2"
  WHITESPACE: 10..11 
  RECORD_FIELD_LIST: 11..26 
    L_BRACE: 11..12 "{"
    WHITESPACE: 12..13 
    RECORD_FIELD: 13..18 
      NAME: 13..14 
        IDENT: 13..14 "x"
      COLON: 14..15 ":"
      WHITESPACE: 15..16 
      LIT_EXPR: 16..17 
        INT: 16..17 "1"
      COMMA: 17..18 ","
    WHITESPACE: 18..19 
    RECORD_FIELD: 19..24 
      NAME: 19..20 
        IDENT: 19..20 "y"
      COLON: 20..21 ":"
      WHITESPACE: 21..22 
      LIT_EXPR: 22..23 
        INT: 22..23 "2"
      COMMA: 23..24 ","
    WHITESPACE: 24..25 
    R_BRACE: 25..26 "}"
