lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__expr-17.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"math::Vec2 { x: 1, y: 2, }\", |p| p.expr())"
---
PATH_EXPR: 0..11 
  PATH: 0..11 
    IDENT: 0..4 "math"
    COLON: 4..5 ":"
    COLON: 5..6 ":"
    IDENT: 6..10 "Vec2"
    WHITESPACE: 10..11
