lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__expr-21.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"foo?.bar?.baz()\", |p| p.expr())"
---
SAFE_METHOD_EXPR: 0..15 
  METHOD_EXPR: 0..15 
    SAFE_FIELD_EXPR: 0..8 
      FIELD_EXPR: 0..8 
        PATH_EXPR: 0..3 
          PATH: 0..3 
            IDENT: 0..3 "foo"
        MARK: 3..4 "?"
        DOT: 4..5 "."
        NAME: 5..8 
          IDENT: 5..8 "bar"
    MARK: 8..9 "?"
    DOT: 9..10 "."
    NAME: 10..13 
      IDENT: 10..13 "baz"
    L_PAREN: 13..14 "("
    R_PAREN: 14..15 ")"
