lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__expr-25.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"std::Vec::new<1 + 2>()\", |p| p.expr())"
---
BINARY_EXPR: 0..22 
  BINARY_EXPR: 0..19 
    PATH_EXPR: 0..13 
      PATH: 0..13 
        PATH_SEGMENT: 0..3 
          IDENT: 0..3 "std"
        COLON: 3..4 ":"
        COLON: 4..5 ":"
        PATH_SEGMENT: 5..8 
          IDENT: 5..8 "Vec"
        COLON: 8..9 ":"
        COLON: 9..10 ":"
        PATH_SEGMENT: 10..13 
          IDENT: 10..13 "new"
    LT: 13..14 "<"
    BINARY_EXPR: 14..19 
      LIT_EXPR: 14..15 
        INT: 14..15 "1"
      WHITESPACE: 15..16 
      PLUS: 16..17 "+"
      WHITESPACE: 17..18 
      LIT_EXPR: 18..19 
        INT: 18..19 "2"
  GT: 19..20 ">"
  UNIT_EXPR: 20..22 
    L_PAREN: 20..21 "("
    R_PAREN: 21..22 ")"
