lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__expr-26.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"((),)\", |p| p.expr())"
---
TUPLE_EXPR: 0..5 
  L_PAREN: 0..1 "("
  UNIT_EXPR: 1..3 
    L_PAREN: 1..2 "("
    R_PAREN: 2..3 ")"
  COMMA: 3..4 ","
  R_PAREN: 4..5 ")"
